# Minimal drop-in replacement for the `os_info` crate.
#
# Why: upstream `os_info` pulls in `objc2-ui-kit` + `objc2-foundation` on iOS
# (together ~23 MB of compiled UIKit bindings) purely to produce a system-info
# string that grammers-client passes to Telegram's `InitConnection` call.
# We don't care about the actual OS string — a generic value works.
#
# This stub exposes only the API surface that grammers-client uses:
#   os_info::get() -> Info
#   Info::os_type()  -> impl Display
#   Info::bitness()  -> impl Display
#   Info::version()  -> impl Display (+ ToString)

[package]
name    = "os_info"
version = "3.14.0"
edition = "2021"

[lib]
name = "os_info"
path = "src/lib.rs"

[package.metadata.cargo-machete]
# This crate is a local patch, never treated as unused by downstream.
ignored = []
