[package]
name = "stream-flow-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

# The binary target is named `stream-flow` (the published command name) even
# though the package is `stream-flow-bin` (design: Workspace and Crate Layout).
[[bin]]
name = "stream-flow"
path = "src/main.rs"

[dependencies]
stream-flow = { workspace = true }
actix-web = { workspace = true }

# The link-contract smoke test (task 1.3) reuses `stream_flow::build_app`
# through the actix test harness to prove the binary package links against the
# library crate (Req 49.6).
[dev-dependencies]
actix-web = { workspace = true }
tokio = { workspace = true }
