[package]
name = "stream-flow-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

# The binary target is named `stream-flow` (the published command name) even
# though the package is `stream-flow-bin` (design: Workspace and Crate Layout).
[[bin]]
name = "stream-flow"
path = "src/main.rs"

[dependencies]
stream-flow = { workspace = true }
actix-web = { workspace = true }
tokio = { workspace = true }
