[package]
name = "stream-flow-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "stream_flow_sdk"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
