[package]
name = "stream-flow"
version.workspace = true
edition.workspace = true
license.workspace = true

# The library crate holds all logic; the binary and FFI crates are thin
# wrappers over it (design: Workspace and Crate Layout).
[lib]
name = "stream_flow"
path = "src/lib.rs"
crate-type = ["rlib"]

# Lints mirror mediaflow-proxy-light: many config fields, cache-key helpers,
# and FFI-facing APIs are exposed for the phased roadmap before every item is
# wired into the binary.
[lints.rust]
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"

[dependencies]
# Only the dependencies needed by the current (skeleton) surface are enabled.
# The full pinned set lives in the workspace `[workspace.dependencies]` table
# (design: Technology Choices) and is opted into by later tasks as the modules
# that use them land.
actix-web = { workspace = true }
# Canonical error taxonomy (task 2.1): `thiserror` derives the error impls and
# `serde`/`serde_json` drive the consistent `ErrorResponse` serialized body
# (design: Data Models -> Canonical Error Taxonomy; Error Handling).
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Configuration model (task 3.1): layered defaults -> file -> env loader
# (design: Data Models -> Configuration Model; Req 31).
config = { workspace = true }
# Panic-boundary middleware (task 2.2): `futures::FutureExt::catch_unwind`
# wraps handler-future execution so a panicking handler becomes a `500`
# without tearing down the worker (design: Error Handling -> Panic boundary).
futures = { workspace = true }

[dev-dependencies]
actix-web = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
# Temp config files for the config-loader tests (task 3.1).
tempfile = { workspace = true }
# Property-based tests for the canonical error taxonomy (task 2.3, Property 47).
proptest = { workspace = true }
