[package]
name = "stream-flow"
version.workspace = true
edition.workspace = true
license.workspace = true

# The library crate holds all logic; the binary and FFI crates are thin
# wrappers over it (design: Workspace and Crate Layout).
[lib]
name = "stream_flow"
path = "src/lib.rs"
crate-type = ["rlib"]

# Lints mirror mediaflow-proxy-light: many config fields, cache-key helpers,
# and FFI-facing APIs are exposed for the phased roadmap before every item is
# wired into the binary.
[lints.rust]
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"

[dependencies]
# Only the dependencies needed by the current (skeleton) surface are enabled.
# The full pinned set lives in the workspace `[workspace.dependencies]` table
# (design: Technology Choices) and is opted into by later tasks as the modules
# that use them land.
actix-web = { workspace = true }
# Canonical error taxonomy (task 2.1): `thiserror` derives the error impls and
# `serde`/`serde_json` drive the consistent `ErrorResponse` serialized body
# (design: Data Models -> Canonical Error Taxonomy; Error Handling).
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Configuration model (task 3.1): layered defaults -> file -> env loader
# (design: Data Models -> Configuration Model; Req 31).
config = { workspace = true }
# Panic-boundary middleware (task 2.2): `futures::FutureExt::catch_unwind`
# wraps handler-future execution so a panicking handler becomes a `500`
# without tearing down the worker (design: Error Handling -> Panic boundary).
futures = { workspace = true }
# Cache layer (task 4.1): `CacheBackend` trait + moka-backed `LocalCache`
# (TTL + LRU). `async-trait` makes the async trait object-safe so Redis and
# failover backends can implement it uniformly; `moka` provides the async
# TTL+LRU cache; `bytes` is the cached-value payload type
# (design: Components -> Cache backend; Req 30).
async-trait = { workspace = true }
moka = { workspace = true }
bytes = { workspace = true }
# Redis cache backend (task 4.2): `RedisCache` implements `CacheBackend` over a
# `deadpool-redis` connection pool, issuing `SET ... PX`/`GET`/`DEL` via the
# `redis` async client. Optional/distributed cache tier behind the same
# namespace + TTL contract as `LocalCache` (design: Components -> Cache
# backend; Req 30.2, 30.3).
deadpool-redis = { workspace = true }
redis = { workspace = true }
# Persistence (task 5.1): embedded SQLite via `sqlx::SqlitePool`. The pool is
# built from `SqliteConnectOptions` configured for WAL journal mode, a 5s
# busy_timeout, `synchronous=NORMAL`, and `foreign_keys=ON`, with a
# configurable `max_connections` (design: Database -> Connection configuration;
# Req 29.1, 29.6).
sqlx = { workspace = true }

# Resilience primitives (task 6.1): the `RetryPolicy` full-jitter backoff RNG
# (`rand`, already linked for crypto IVs — design: Technology Choices "Jitter /
# backoff RNG") and `tokio::time::sleep` for the retry-run loop's backoff waits
# (design: Resilience -> Pattern 2 "Unified Retry Policy"; Req 50.1, 35.4).
rand = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
actix-web = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
# Temp config files for the config-loader tests (task 3.1).
tempfile = { workspace = true }
# Property-based tests for the canonical error taxonomy (task 2.3, Property 47).
proptest = { workspace = true }
