[package]
name = "stream-flow"
version.workspace = true
edition.workspace = true
license.workspace = true

# The library crate holds all logic; the binary and FFI crates are thin
# wrappers over it (design: Workspace and Crate Layout).
[lib]
name = "stream_flow"
path = "src/lib.rs"
crate-type = ["rlib"]

# Lints mirror mediaflow-proxy-light: many config fields, cache-key helpers,
# and FFI-facing APIs are exposed for the phased roadmap before every item is
# wired into the binary.
[lints.rust]
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"

[dependencies]
# Only the dependencies needed by the current (skeleton) surface are enabled.
# The full pinned set lives in the workspace `[workspace.dependencies]` table
# (design: Technology Choices) and is opted into by later tasks as the modules
# that use them land.
actix-web = { workspace = true }
# Canonical error taxonomy (task 2.1): `thiserror` derives the error impls and
# `serde`/`serde_json` drive the consistent `ErrorResponse` serialized body
# (design: Data Models -> Canonical Error Taxonomy; Error Handling).
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Configuration model (task 3.1): layered defaults -> file -> env loader
# (design: Data Models -> Configuration Model; Req 31).
config = { workspace = true }
# Panic-boundary middleware (task 2.2): `futures::FutureExt::catch_unwind`
# wraps handler-future execution so a panicking handler becomes a `500`
# without tearing down the worker (design: Error Handling -> Panic boundary).
futures = { workspace = true }
# Generic ranged proxy core (task 14.2): `async-stream` builds the
# bounded-buffer relay body as an `async` generator stream — reading upstream
# chunks into the `AdaptiveJitterBuffer` and yielding drained bytes toward the
# client without ever loading the whole body into memory (design: Components ->
# Streaming Core; Req 5.7, 5.8).
async-stream = { workspace = true }
# Cache layer (task 4.1): `CacheBackend` trait + moka-backed `LocalCache`
# (TTL + LRU). `async-trait` makes the async trait object-safe so Redis and
# failover backends can implement it uniformly; `moka` provides the async
# TTL+LRU cache; `bytes` is the cached-value payload type
# (design: Components -> Cache backend; Req 30).
async-trait = { workspace = true }
moka = { workspace = true }
bytes = { workspace = true }
# Redis cache backend (task 4.2): `RedisCache` implements `CacheBackend` over a
# `deadpool-redis` connection pool, issuing `SET ... PX`/`GET`/`DEL` via the
# `redis` async client. Optional/distributed cache tier behind the same
# namespace + TTL contract as `LocalCache` (design: Components -> Cache
# backend; Req 30.2, 30.3).
deadpool-redis = { workspace = true }
redis = { workspace = true }
# Egress single outbound seam (task 8.3): `OutboundClient` builds every
# upstream request through a tunneled `reqwest` client (default, rustls) and a
# tunneled `wreq` client (Chrome-JA3/JA4 impersonation for Cloudflare-fronted
# extractor hosts, Req 35.5), routing through the configured Egress_Tunnel so
# upstreams observe only the Egress_IP (design: Components -> Egress ->
# OutboundClient; Req 51.1, 51.9). `url` parses/validates the target URL and
# selects the per-host tunnel (Req 51.9). `wreq-util` supplies the browser
# emulation templates for the impersonation client. (`wreq`/`wreq-util` are the
# maintained successors of the deprecated, crates.io-removed `rquest`/`rquest-util`.)
reqwest = { workspace = true }
wreq = { workspace = true }
wreq-util = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }

# HLS manifest parse + full rewriting (task 16.1): `m3u8-rs` parses master and
# media `.m3u8` playlists into structured `Playlist` values and serializes them
# back, so every variant / segment / `#EXT-X-KEY` / `#EXT-X-MAP` URL can be
# rewritten to a `stream-flow` proxy URL after resolving relative URIs against
# the manifest base, with a parse/serialize round trip preserved (design:
# Components -> HLS; Technology Choices "HLS parsing"; Req 1.1-1.4, 1.8, 48.4).
m3u8-rs = { workspace = true }

# Persistence (task 5.1): embedded SQLite via `sqlx::SqlitePool`. The pool is
# built from `SqliteConnectOptions` configured for WAL journal mode, a 5s
# busy_timeout, `synchronous=NORMAL`, and `foreign_keys=ON`, with a
# configurable `max_connections` (design: Database -> Connection configuration;
# Req 29.1, 29.6).
sqlx = { workspace = true }

# Migration logging (task 5.2): a failing startup migration is recorded in the
# structured log naming the failing version before startup aborts (Req 29.4;
# design: Database -> Migration mechanism).
tracing = { workspace = true }

# Vault at-rest field encryption (task 5.3): AES-256-GCM authenticated
# encryption of sensitive persisted fields (store tokens, Trakt tokens, peer
# tokens) keyed from the configured `Vault_Secret`. `sha2` derives the fixed
# 32-byte AES-256 key from the arbitrary-length secret; `rand` generates the
# per-message 96-bit nonce (design: Database -> Schema "AES-GCM(Vault_Secret)";
# Req 29.5).
aes-gcm = { workspace = true }
sha2 = { workspace = true }
# Persistence row timestamps (task 5.3): `OffsetDateTime` for the row models'
# time fields, stored as unix-second `INTEGER`s in SQLite (design: Data Models
# -> Persistence Models).
time = { workspace = true }

# Resilience primitives (task 6.1): the `RetryPolicy` full-jitter backoff RNG
# (`rand`, already linked for crypto IVs — design: Technology Choices "Jitter /
# backoff RNG") and `tokio::time::sleep` for the retry-run loop's backoff waits
# (design: Resilience -> Pattern 2 "Unified Retry Policy"; Req 50.1, 35.4).
rand = { workspace = true }
tokio = { workspace = true }
# Bulkhead isolation pools (task 6.4): `tokio::sync::Semaphore` backs each
# per-dependency concurrency pool and `dashmap` holds the per-key registry
# (per-store/per-host/per-integration) shared across worker tasks
# (design: Resilience -> Pattern 3 "Bulkhead Isolation"; Req 35.3, 20.3, 50.9).
dashmap = { workspace = true }
# FailoverCache (task 4.3): `arc-swap`'s `ArcSwapOption<RedisCache>` holds the
# optional Redis backend so a Redis outage drops the handle and a supervised
# reattach loop restores it — all without a lock on the cache hot path, so
# in-flight requests never block or fail on a Redis blip
# (design: Components -> Cache backend (FailoverCache); Req 30.5, 50.5).
arc-swap = { workspace = true }
# Proxy-link / URL-parameter encryption (task 9.2): mediaflow-proxy-light-style
# AES-256-CBC over the proxy payload, keyed from the `API_Password`, with the
# token framed as `base64url-no-pad(IV[16] || AES-CBC-PKCS7(json))` for drop-in
# compatibility with existing mediaflow `d` parameters. `aes` is the AES block
# cipher, `cbc` the CBC mode (with PKCS7 padding via the `block-padding`
# `cipher` feature) and `alloc` for the `*_padded_vec_mut` helpers, and
# `base64` the URL-safe-no-pad transport encoding (`rand`, already linked,
# generates the per-token IV) (design: Data Models -> Proxy Link / Token
# Formats; Req 14.1, 14.2, 14.3, 14.4).
aes = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
base64 = { workspace = true }
# DRM — MP4 sample-encryption box parser + ClearKey store (task 16.4): `hex`
# renders a 16-byte CENC key identifier (KID) as a stable hex string both for
# the unresolved-KID error message (Req 4.8) and for parsing hex-configured
# ClearKey `KID:key` pairs into the configured key set (Req 4.6). The per-KID
# resolved-key cache (Req 4.7) reuses `tokio::time::Instant`-free `std::time`
# deadlines and is bounded by the configured key set, so no extra cache crate
# is pulled in (design: Components -> DRM).
hex = { workspace = true }
# DRM — per-scheme ClearKey decryption (task 16.5): the four CENC schemes
# decrypt with AES-128 in either counter (`cenc`/`cens`) or cipher-block-
# chaining (`cbc1`/`cbcs`) mode (design: Components -> DRM; Req 4.2-4.5). `aes`
# is the block cipher, `ctr` the AES-CTR stream mode (its `apply_keystream`
# preserves the block counter + partial-block position across subsample runs,
# which the `cenc`/`cens` schemes rely on), `cbc` the AES-CBC mode, and
# `cipher` the shared block/stream-cipher traits (`KeyIvInit`,
# `StreamCipher`, `BlockDecryptMut`). `ctr` is added here (the proxy-link path
# in task 9.2 only needed `cbc`); `aes`/`cbc`/`cipher` are already linked above.
ctr = { workspace = true }
# MPD parsing + DASH->HLS conversion (task 16.2): the MPD/DASH manifest is an
# XML document parsed into a structured `Mpd { periods, adaptation_sets,
# representations }` via `quick-xml`'s serde deserializer (the workspace
# `serialize` feature enables `quick_xml::de`). The parsed tree drives
# `to_hls_master` (one HLS variant per representation) and `to_hls_media`
# (VOD = all segments, live = most recent `live_playlist_depth`), with parse
# failures surfaced as descriptive errors that name the failing element
# (design: Components -> MPD / DASH->HLS; Req 2.1-2.8).
quick-xml = { workspace = true }
# Video extractors (task 19.3): `scraper` parses host HTML pages into a DOM so
# media URLs can be located with CSS selectors (e.g. Vidoza's `<source src>`),
# and `regex` unpacks the inline-JS media-link builders that are not
# expressible as DOM queries (e.g. Streamtape's split+`.substring()` token
# assembly). The `Extractor` trait, the case-insensitive `ExtractorFactory`
# registry over the 24 hosts, the two client pools, and the Byparr
# (FlareSolverr-style) fallback reuse the already-linked `reqwest`/`wreq` (via
# the single egress seam), `serde_json` (Byparr request/response JSON), and
# `async-trait` (object-safe async `Extractor` trait) (design: Components ->
# Extractor (+Byparr); Req 12).
scraper = { workspace = true }
regex = { workspace = true }
# Auth verifiers + credential resolution (task 9.1): secret comparisons
# (API_Password, Proxy_Auth passwords, tokens) use a constant-time
# double-HMAC equality so a wrong secret takes the same time as a right one,
# regardless of length, leaking neither value nor length (design: Components ->
# Auth "constant-time compare via subtle/hmac-based equality"; Req 28.8).
# `sha2` (already linked for the vault) is the HMAC hash.
hmac = { workspace = true }
# Degradation Guard (task 11.3): the basic guard tracks active connections with
# atomic counters and samples process RSS via a cheap, periodic gauge to drive
# the `LoadState` high-water marks (design: Components -> Degradation Guard;
# Technology Choices "Process RSS sampling"; Req 44.2). Sampled (not
# per-request) to stay lightweight.
sysinfo = { workspace = true }
# Observability (task 12.1): Prometheus exposition at `/metrics` (Req 32.1) is
# built from a `prometheus::Registry` of counters/histograms covering proxied
# requests, store operations, cache hit/miss, upstream failures, and every
# self-healing action (retries, breaker transitions, store fallbacks, task
# restarts, Redis reattach, resource reclamation) so the system's healing is
# observable (Req 32.5, 50.14). `tracing-subscriber` installs the structured
# logging stack (Req 32.3) with a secret-redaction layer that scrubs known
# secrets from URLs/headers before any log line is emitted (Req 32.6, 46.7).
prometheus = { workspace = true }
tracing-subscriber = { workspace = true }
# Built-in web UI assets are embedded into the library so the binary and FFI
# hosts do not need a separate static-file directory at runtime (Req 33).
rust-embed = { workspace = true }

[dev-dependencies]
actix-web = { workspace = true }
# `test-util` (additive over the workspace `full` set) enables the paused
# "fake clock" runtime (`#[tokio::test(start_paused = true)]` /
# `tokio::time::pause`/`advance`) used by the deadline tests (task 6.3) so
# timeout behavior is verified deterministically without real sleeping.
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
# Temp config files for the config-loader tests (task 3.1).
tempfile = { workspace = true }
# Property-based tests for the canonical error taxonomy (task 2.3, Property 47).
proptest = { workspace = true }
# HLS manifest parse/serialize round-trip + full-rewriting property test
# (task 16.6, Property 10): the integration test renders arbitrary valid
# master/media `.m3u8` manifests and drives them through `stream_flow::hls`.
# `m3u8-rs` parses + serializes the generated manifest to assert the
# parse→serialize→parse round trip is a fixed point (Req 1.x / 48.4), and `url`
# builds the manifest base `Url` passed to `HlsRewriter::rewrite` and computes
# the expected relative-URI resolution (Req 1.4). Integration tests are
# separate crates and do not inherit the library's `[dependencies]`, so both
# are declared here.
m3u8-rs = { workspace = true }
url = { workspace = true }
# Proxy-auth property test (task 9.3, Property 27): builds the base64-encoded
# `user:pass` form the verifier must accept alongside the plain form (Req 28.2).
base64 = { workspace = true }
# Mock upstream origin for the streaming-core `UpstreamSource`/`DirectSource`
# tests (task 13.3): `wiremock` stands up an in-process HTTP origin that serves
# ranged bodies and redirect chains so `DirectSource::open` is exercised
# end-to-end against a real socket without any network dependency (design:
# Testing Strategy -> Integration tests "Mock streaming origin"; Req 48.6).
wiremock = { workspace = true }
# CENC decryption round-trip property test (task 16.9, Property 13): the test
# builds an independent reference encryptor for the four CENC schemes
# (cenc/cens/cbc1/cbcs) and round-trips it against
# `drm::cenc::decrypt_sample`. Integration tests are separate crates and do not
# inherit the library `[dependencies]`, so the AES primitives are redeclared
# here: `aes` (the AES-128 block cipher), `ctr` (AES-CTR for cenc/cens), `cbc`
# (AES-CBC for cbc1/cbcs), and `cipher` (the shared Key/IV-init, stream- and
# block-cipher traits plus `GenericArray`).
aes = { workspace = true }
ctr = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
