[package]
name = "zippy-panther-bin"
version.workspace = true
edition.workspace = true
license.workspace = true

# The binary target is named `zippy-panther` (the published command name) even
# though the package is `zippy-panther-bin` (design: Workspace and Crate Layout).
[[bin]]
name = "zippy-panther"
path = "src/main.rs"

[dependencies]
zippy-panther = { workspace = true }
actix-web = { workspace = true }
tokio = { workspace = true }
