[package]
name = "zippy-panther-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "zippy_panther_sdk"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
